minor fixes on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -126,7 +126,7 @@ body {
 
 
 .item9 {
-    margin-right: 1em;
+    margin-right: 2em;
 }
 .item1 {
     margin-left: 1em;
